add html view system

--- a/core/mvc/views/documentation/developer.html
+++ b/core/mvc/views/documentation/developer.html
@@ -116,7 +116,7 @@
                     </li>
                 </ul>
                 <ul class="sidenav" id="controllers">
-                    {{sidenav_controllers}}
+                    {{$sidenav_controllers}}
                 </ul>
             </div>
         </nav>
@@ -133,7 +133,7 @@
         </header>
         <main>
             <div class="container sections">
-                {{sections}}
+                {{$sections}}
             </div>
         </main>
     </body>
